Update servers and specs, add 3D route to Stability
