# stability/server.py
@@ -1,5 +1,6 @@
 # A wrapper around the StabilityAI API to organize it for use with Ouro
 
+import base64
 import json
 import os
 import re
@@ -30,6 +31,12 @@ class AspectRatioEnum(str, Enum):
     ratio_5_4 = "5:4"
     ratio_9_16 = "9:16"
     ratio_9_21 = "9:21"
+
+
+class TextureResolutionEnum(str, Enum):
+    res_1024 = 1024
+    res_2048 = 2048
+    res_512 = 512
 
 
 class ImageGenRequest(BaseModel):
@@ -88,6 +95,22 @@ class ControlRequest(BaseModel):
     #     title="Output Format",
     #     description="Dictates the content-type of the generated image.",
     # )
+
+
+class Fast3DRequest(BaseModel):
+    file: File
+    texture_resolution: TextureResolutionEnum = Field(
+        1024,
+        title="Texture Resolution",
+        description="Determines the resolution of the textures used for both the albedo (color) map and the normal map.",
+    )
+    foreground_ratio: float = Field(
+        0.85,
+        title="Foreground Ratio",
+        description="Controls the amount of padding around the object to be processed within the frame. A higher ratio means less padding and a larger object, while a lower ratio increases the padding.",
+        ge=0,
+        le=1,
+    )
 
 
 # Initialize FastAPI app
@@ -322,6 +345,60 @@ async def control_with_sketch(
                 "base64": data["image"],
                 "type": "image/png",
                 "extension": "png",
+            }
+        }
+
+    except Exception as e:
+        print(e)
+        raise HTTPException(status_code=500, detail=str(e))
+
+
+@app.post(
+    "/3d/stable-fast-3d",
+    summary="Generate 3D assets from a single 2D input image",
+)
+@ouro_field("x-ouro-input-asset-type", "file")
+@ouro_field("x-ouro-input-asset-filter", "image")
+@ouro_field("x-ouro-output-asset-type", "file")
+@ouro_field("x-ouro-output-asset-filter", "3d")
+async def fast_3d(
+    body: Fast3DRequest, authorization: str | None = Header(default=None)
+):
+    try:
+        # Read the image file and pass it directly to next request
+        file_response = requests.get(body.file.url)
+        if file_response.status_code != 200:
+            raise Exception("Failed to read the image file.")
+
+        api_key = authorization.split(" ")[1] if authorization else None
+        response = requests.post(
+            f"https://api.stability.ai/v2beta/3d/stable-fast-3d",
+            headers={
+                "authorization": f"Bearer {api_key}",
+                "accept": "application/json",
+            },
+            files={"image": file_response.content},
+            data={
+                "texture_resolution": body.texture_resolution,
+                "foreground_ratio": body.foreground_ratio,
+            },
+        )
+
+        if response.status_code == 200:
+            data = response.content
+            # Encode the content as base64
+            data = base64.b64encode(data).decode("utf-8")
+        else:
+            raise Exception(str(response.json()))
+
+        file_name = body.file.name or body.file.filename or "Image"
+        return {
+            "file": {
+                "name": f"{file_name} as 3D model",
+                "description": f"Generated model from an image using the StabilityAI API.",
+                "base64": data,
+                "type": "model/gltf-binary",
+                "extension": "glb",
             }
         }
 
